examples/test/testpolicy11944.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11944
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key16: value42
      key2: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value4
      podSelector:
        matchLabels:
          key16: value1
          key8: value21
